# sliding_window

./: .gitignore  Cargo.toml  README.md
benches/: bench_main.rs
benches/benchmarks/: bench_arr.rs  bench_vec.rs  fields.rs  mod.rs
examples/: array.rs  main.rs  vector.rs
src/: array_backed.rs  lib.rs  sliding_window.rs  storage.rs  storage_array.rs  storage_gen_arr.rs  storage_vec.rs  vector_backed.rs
tests/: array_backed_tests.rs  vector_backed_tests.rs
