[package]
name = "sliding_window"
authors = ["Marvin Hansen <marvin.hansen@gmail.com>", ]
edition = "2021"
repository = "https://github.com/marvin-hansen/sliding_window"
rust-version = "1.65"
version = "0.3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "bench_main"
harness = false
